Refactor: Agrega el id de centro en la ruta de carga de reporte
Con este idCentro mas el idReporte se obtendra el reporte con variables y respuestas

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -90,5 +90,6 @@
   <app-pop-up-start
     *ngIf="flagStartReport"
     [idReport]="reportToShow.idReporte"
+    [idCentro]="reportToShow.idCentro"
   ></app-pop-up-start>
 </section>
