--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -34,6 +34,7 @@
   <section class="upload-report__conteiner">
     <app-report-upload
       [idReport]="idReport"
+      [idCenter]="idCenter"
       [flagLastAxe]="flagLastAxe"
       [flagEndReport]="flagEndReport"
       (reportToUpload)="getReportToUpload($event)"
