--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -1,8 +1,6 @@
 <!-- VISTA DE EJES A COMPLETAR, UNO POR VEZ -->
 <section class="report" *ngIf="!flagLastAxe" #scroll>
-  <h1 class="report__title">
-    EJE {{ indexOfAxe }}: {{ axeToUpload.toUpperCase() }}
-  </h1>
+  <h1 class="report__title">EJE {{ indexOfAxe }}:</h1>
   <div
     class="report__variable"
     *ngFor="let variable of variablesReport; let i = index"
