--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -20,15 +20,12 @@
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
             <div class="circle active">
+                <mat-icon style="color: #1967d2">check</mat-icon>
                 <span>Inicio</span>
             </div>
-            <div class="circle">
-                <mat-icon *ngIf="flag1" style="color: #1967d2">check</mat-icon>
-                <span>Eje 1</span>
-            </div>
-            <div class="circle">
-                <mat-icon *ngIf="flag2" style="color: #1967d2">check</mat-icon>
-                <span>Eje 2</span>
+            <div class="circle" *ngFor="let item of items">
+                <mat-icon *ngIf="item+1<currentActive" style="color: #1967d2">check</mat-icon>
+                <span>Eje {{item}}</span>
             </div>
             <div class="circle">
                 <mat-icon *ngIf="flag3" style="color: #1967d2">check</mat-icon>
