--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -15,7 +15,7 @@
   <section class="upload-report__progress">
     <h1 class="upload-report__title">CARGA DE REPORTE</h1>
     <div class="progress-bar">
-      <!-- Aqui iria la maqueta de la barra de progreso -->
+    <!-- barra de progreso -->
       <div class="container" id="container">
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
@@ -33,6 +33,7 @@
             </div>
         </div>
     </div>
+    <!-- fin barra de progreso -->
     </div>
     <button
       mat-raised-button
