Rafactor: Agrega action en input a report upload y en logica en ts
Para poder realizar el post en la carga de reporte cuando se inicia el reporte o el get si se quiere continuar con la carga

--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -33,6 +33,7 @@
   </section>
   <section class="upload-report__conteiner">
     <app-report-upload
+      [action]="action"
       [idReport]="idReport"
       [idCenter]="idCenter"
       [flagLastAxe]="flagLastAxe"
