Feat: agrega funcion click al boton duplicated
para duplicar reporte selecciondo

--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -47,7 +47,7 @@
                                 src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar"
                                 matTooltip="Editar" />
                         </a>
-                        <a>
+                        <a (click)="duplicated(element)">
                             <img class="list-reports__ico-action" src="../../../../../assets/icons/bookmarks.svg"
                                 alt="Icono de duplicar" matTooltip="Duplicar" />
                         </a>
