Feat: agrega mat-error
para mostrar que no esta cargando datos en los selects

--- a/src/app/modules/admin/containers/selecs-axes-variables/selecs-axes-variables.component.html
+++ b/src/app/modules/admin/containers/selecs-axes-variables/selecs-axes-variables.component.html
@@ -9,6 +9,7 @@
         <mat-option [value]="item" *ngFor="let item of listOfVariablesShow">{{item.nombre}}</mat-option>
     </mat-select>
 </div>
+<mat-error *ngIf="!axe">Seleccione un eje y variables</mat-error>
 <div class="container-label-variables">
     <div>
         <div>
@@ -20,4 +21,6 @@
             </a>
         </label>
     </div>
+    
 </div>
+
