Style: cambia   height a auto

--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -223,7 +223,7 @@
         z-index: 1001;
         position: absolute;
         width: 406px;
-        height: 442px;
+        height: auto;
         top: 20%;
         background: #FFFFFF;
         border: 1px solid #79747E;
