Refactor: Cambia onStartRepor() para recibir el valor de la accion elegida y asi pasar por ruta esa accion a report-upload

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -52,7 +52,7 @@
           class="report__btn-start"
           color="primary"
           type="submit"
-          (click)="onStartReport()"
+          (click)="onStartReport('iniciar-carga')"
           [disabled]="(reportToShow.reporteACargar.ejeActual - 1 || 0) !== 0"
         >
           Iniciar carga
@@ -64,7 +64,7 @@
           class="report__btn-continue"
           color="primary"
           type="submit"
-          (click)="onStartReport()"
+          (click)="onStartReport('reanudar-carga')"
           [disabled]="(reportToShow.reporteACargar.ejeActual - 1 || 0) === 0"
         >
           Reanudar Carga de Reporte
