--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -103,7 +103,7 @@
                 <p>{{item.nombre}}</p>
                 <label class="label" type="text" disabled>{{item.usuario?.email}}</label>
             </div>
-            <button *ngIf="data.editar" mat-button (click)="editar()">Confirmar</button>
+            <button *ngIf="data.editar" mat-button (click)="editar()">Editar</button>
             <button *ngIf="!data.editar" mat-button (click)="enviar()">Confirmar</button>
         </div>
         <div *ngIf="flag" class="overlay"></div>
