Refactor: agrega flagLastAxe false en onGoBackLastAxe()

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -18,6 +18,7 @@
   <app-pop-up-success
     [flagAxeSuccess]="flagAxeSuccess"
     [textSuccess]="'¡Eje guardado con éxito! Continuarás con el siguiente Eje'"
+    (closePopUpSuccess)="onCloseModal($event)"
   ></app-pop-up-success>
   <app-pop-up-error
     [flagAxeError]="flagAxeError"
