--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -19,15 +19,9 @@
       <div class="container" id="container">
         <div class="progress-container" id="progress-container">
           <div class="progress" id="progress"></div>
-          <div class="circle active">
-            <mat-icon style="color: #1967d2">check</mat-icon>
-            <span>Inicio</span>
-          </div>
-          <div class="circle" *ngFor="let item of items">
-            <mat-icon *ngIf="item + 1 < currentActive" style="color: #1967d2"
-              >check</mat-icon
-            >
-            <span>Eje {{ item }}</span>
+          <div class="circle" *ngFor="let item of axes">
+            <mat-icon *ngIf="item < currentActive" style="color: #1967d2">check</mat-icon>
+            <span style="width: 50%;">Eje {{ item }}</span>
           </div>
           <div class="circle">
             <mat-icon *ngIf="flag3" style="color: #1967d2">check</mat-icon>
