Refactor: Agrega condición de disable en btn de pending report para empezar, continuar o reiniciar carga
Esto es por si el usuario guarda elreporte en el eje 1, para que no reinicie todo el reporte, sino que continue con la carga con las respuestas ya guardadas

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -53,7 +53,10 @@
           color="primary"
           type="submit"
           (click)="onStartReport('iniciar-carga')"
-          [disabled]="(reportToShow.reporteACargar.ejeActual - 1 || 0) !== 0"
+          [disabled]="
+            (reportToShow.reporteACargar.ejeActual - 1 || 0) !== 0 ||
+            reportToShow.reporteACargar.respuestas.length !== 0
+          "
         >
           Iniciar carga
         </button>
@@ -65,7 +68,10 @@
           color="primary"
           type="submit"
           (click)="onStartReport('reanudar-carga')"
-          [disabled]="(reportToShow.reporteACargar.ejeActual - 1 || 0) === 0"
+          [disabled]="
+            (reportToShow.reporteACargar.ejeActual - 1 || 0) === 0 &&
+            reportToShow.reporteACargar.respuestas.length === 0
+          "
         >
           Reanudar Carga de Reporte
         </button>
@@ -75,7 +81,10 @@
           color="primary"
           type="submit"
           (click)="onDeleteReport(true)"
-          [disabled]="(reportToShow.reporteACargar.ejeActual - 1 || 0) === 0"
+          [disabled]="
+            (reportToShow.reporteACargar.ejeActual - 1 || 0) === 0 &&
+            reportToShow.reporteACargar.respuestas.length === 0
+          "
         >
           Volver a empezar
         </button>
