--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
@@ -72,27 +72,36 @@ p {
           color: #ffffff;
         }
         .list-report__cell--action {
-          path {
-            fill: white;
+          .list-report__action-ico {
+            transition: all 0.1s linear;
+            path {
+              fill: white;
+            }
+            &:hover {
+              background-color: #ffffff;
+              path {
+                fill: $color-bg-hover-primary;
+              }
+            }
           }
         }
       }
     }
     .list-report__row {
-      min-height: 56px;
+      min-height: 58px;
       display: grid;
       grid-template-columns: repeat(3, 1fr) 98px;
       justify-items: center;
       align-items: center;
       box-shadow: 0 2px 2px #00000040;
-      padding-top: 8px;
+      padding-top: 4px;
       padding-left: 1.5em;
       padding-right: 48px;
       .list-report__header {
         text-align: start;
         font-family: "Inter-700";
         font-size: 1em;
-        line-height: 1.1875em;
+        line-height: 16px;
         color: #000000;
         &:first-of-type {
           padding-left: 1.5em;
@@ -103,7 +112,7 @@ p {
       .list-report__cell {
         font-family: "Inter" !important;
         font-size: 1em;
-        line-height: 1.1875em;
+        line-height: 16px;
         color: #000000;
         transition: all 0.1s linear;
         text-align: center;
@@ -114,14 +123,15 @@ p {
       }
       .list-report__cell--action {
         width: 100%;
-
         display: flex;
         justify-content: space-between;
+        padding-bottom: 4px;
         .list-report__action-ico {
           width: 36px;
           height: 36px;
           padding: 6px;
           cursor: pointer;
+          border-radius: 10px;
         }
       }
     }
