Feat: Agrega tooltip para icono de descarga y observaciones

--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
@@ -50,6 +50,7 @@
           <p class="list-report__cell list-report__cell--action">
             <svg
               class="list-report__action-ico"
+              matTooltip="Descargar"
               width="24"
               height="24"
               viewBox="0 0 24 24"
@@ -79,6 +80,7 @@
             </svg>
             <svg
               class="list-report__action-ico"
+              matTooltip="Observaciones"
               width="24"
               height="24"
               viewBox="0 0 24 24"
