Feat: Agrega metodo para mostrar el modal de comentarios
tambien guarda los comentarios a mostrar en variable

--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
@@ -84,6 +84,7 @@
               />
             </svg>
             <svg
+             (click)="showComments(element.comentarios)"
               class="list-report__action-ico"
               matTooltip="Observaciones"
               width="24"
