Feat: agrega boton close
permite cerrar el modal de envio

--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -98,6 +98,7 @@
             </section>
         </div>
         <div *ngIf="flag" class="modal-2">
+            <div class="close" (click)="closeModal()"><span style="margin-bottom: 5px;">x</span></div>
             <label>Confirmar envio</label>
             <div *ngFor="let item of centerSelects">
                 <p>{{item.nombre}}</p>
