--- a/src/app/modules/admin/containers/selecs-axes-variables/selecs-axes-variables.component.html
+++ b/src/app/modules/admin/containers/selecs-axes-variables/selecs-axes-variables.component.html
@@ -10,8 +10,10 @@
     </mat-select>
 </div>
 <mat-error *ngIf="!axe">Seleccione un eje y variables</mat-error>
+
 <div class="container-label-variables">
     <div>
+        <mat-error *ngIf="variablesArray.length==0">Seleccione variables</mat-error>
         <div>
             <label>Variables Seleccionadas </label>
         </div>
