--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
@@ -33,13 +33,13 @@
         <div
           class="list-report__row list-report__row--click"
           *ngFor="let element of listOfReceivedReport_toShow | async"
-          (click)="setNameReceivedReportLocalStorage(element.nombreReporte)"
-          [routerLink]="[
-            'reporte-recibido/' +
-              element.idReporte.toString() +
-              '/' +
-              element.idCentro.toString()
-          ]"
+          (click)="
+            setNameReceivedReportLocalStorage(
+              element.nombreReporte,
+              element.idReporte,
+              element.idCentro
+            )
+          "
         >
           <p class="list-report__cell">
             {{ element.nombreReporte }}
@@ -84,7 +84,7 @@
               />
             </svg>
             <svg
-             (click)="showComments(element.comentarios)"
+              (click)="showComments($event, element.comentarios)"
               class="list-report__action-ico"
               matTooltip="Observaciones"
               width="24"
@@ -149,5 +149,43 @@
         </svg>
       </div>
     </section>
+  </div>
+  <div *ngIf="flagPopUpComments" class="modal-container">
+    <div class="modal-comments">
+      <svg
+        class="modal-comments__close"
+        (click)="closeComments()"
+        width="24"
+        height="31"
+        viewBox="0 0 24 31"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M17.781 8.0329C17.8508 8.12289 17.9062 8.22979 17.944 8.34748C17.9818 8.46518 18.0013 8.59135 18.0013 8.71877C18.0013 8.8462 17.9818 8.97237 17.944 9.09006C17.9062 9.20776 17.8508 9.31466 17.781 9.40465L7.28097 22.9671C7.14014 23.1491 6.94913 23.2512 6.74997 23.2512C6.55081 23.2512 6.3598 23.1491 6.21897 22.9671C6.07814 22.7852 5.99902 22.5385 5.99902 22.2813C5.99902 22.024 6.07814 21.7773 6.21897 21.5954L16.719 8.0329C16.7886 7.94268 16.8714 7.8711 16.9625 7.82227C17.0536 7.77343 17.1513 7.74829 17.25 7.74829C17.3486 7.74829 17.4463 7.77343 17.5374 7.82227C17.6285 7.8711 17.7113 7.94268 17.781 8.0329V8.0329Z"
+          fill="#22502B"
+        />
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M6.21936 8.0329C6.14952 8.12289 6.0941 8.22979 6.0563 8.34748C6.01849 8.46518 5.99902 8.59135 5.99902 8.71877C5.99902 8.8462 6.01849 8.97237 6.0563 9.09006C6.0941 9.20776 6.14952 9.31466 6.21936 9.40465L16.7194 22.9671C16.8602 23.1491 17.0512 23.2512 17.2504 23.2512C17.4495 23.2512 17.6405 23.1491 17.7814 22.9671C17.9222 22.7852 18.0013 22.5385 18.0013 22.2813C18.0013 22.024 17.9222 21.7773 17.7814 21.5954L7.28136 8.0329C7.2117 7.94268 7.12893 7.8711 7.03781 7.82227C6.9467 7.77343 6.84902 7.74829 6.75036 7.74829C6.65171 7.74829 6.55403 7.77343 6.46291 7.82227C6.3718 7.8711 6.28903 7.94268 6.21936 8.0329V8.0329Z"
+          fill="#22502B"
+        />
+      </svg>
+      <h4 class="modal-comments__title">
+        Observaciones, reseñas y comentarios
+      </h4>
+      <h5 class="modal-comments__name-report">Reporte C00010</h5>
+      <div class="modal-comments__container">
+        <p
+          class="modal-comments__comment"
+          *ngFor="let comment of commentsToShow"
+        >
+          {{ comment.observacion }}
+        </p>
+      </div>
+    </div>
   </div>
 </section>
