--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
@@ -157,3 +157,85 @@ p {
     }
   }
 }
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(121, 116, 126, 0.5);
+  z-index: 1600;
+  .modal-comments {
+    width: 635px;
+    min-height: 382px;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px 10px 0;
+    display: flex;
+    flex-direction: column;
+
+    .modal-comments__close {
+      align-self: flex-end;
+      box-sizing: content-box;
+      width: 24px;
+      height: 24px;
+      padding: 18px 21px 4px;
+      // margin: 8px 11px 4px;
+      cursor: pointer;
+      &:hover {
+        path {
+          fill: $color-bg-hover-primary;
+        }
+      }
+    }
+    .modal-comments__title {
+      width: 434px;
+      height: 36px;
+      color: white;
+      display: flex;
+      align-items: center;
+      background: #083d5e;
+      border-radius: 0px 30px 0px 0px;
+      font-size: 16px;
+      margin-bottom: 40px;
+      padding-left: 23px;
+    }
+    .modal-comments__name-report {
+      align-self: center;
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+    .modal-comments__container {
+      align-self: center;
+      width: 485px;
+      min-height: 162px;
+      max-height: 600px;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      border: 1px solid #083d5e;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 10px;
+      padding: 18px;
+      margin-bottom: 60px;
+      &::-webkit-scrollbar {
+        width: 15px; /* width of the entire scrollbar */
+      }
+      &::-webkit-scrollbar-track {
+        background: rgb(255, 255, 255); /* color of the tracking area */
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #d9d9d9; /* color of the scroll thumb */
+        border-radius: 50px; /* roundness of the scroll thumb */
+        border: 1px solid #ffffff; /* creates padding around scroll thumb */
+      }
+      .modal-comments__comment {
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+      }
+    }
+  }
+}
