--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
@@ -224,7 +224,7 @@ p {
         width: 15px; /* width of the entire scrollbar */
       }
       &::-webkit-scrollbar-track {
-        background: rgb(255, 255, 255); /* color of the tracking area */
+        background: rgba(255, 255, 255, 0); /* color of the tracking area */
       }
       &::-webkit-scrollbar-thumb {
         background-color: #d9d9d9; /* color of the scroll thumb */
