--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -63,7 +63,9 @@
           <div class="list-variable__cell list-variables__cell--acction">
             <a [routerLink]="['add-mod-variables/', element.id.toString()]">
               <img
-                class="list-variables__ico-action list-variables__ico-action--edit"
+                class="
+                  list-variables__ico-action list-variables__ico-action--edit
+                "
                 src="../../../../../assets/icons/Pencil.svg"
                 alt="Icono de editar"
                 matTooltip="Editar"
