Refactor: agrega ngIf para mostrar icono de ver observaciones solo si existen

--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
@@ -84,6 +84,7 @@
               />
             </svg>
             <svg
+              *ngIf="element.comentarios.length > 0"
               (click)="showComments($event, element.comentarios)"
               class="list-report__action-ico"
               matTooltip="Observaciones"
