--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.scss
@@ -145,7 +145,7 @@ p {
           display: flex;
           justify-content: center;
           align-items: center;
-          padding: 0;
+          padding: 0 2px 0 0;
         }
       }
     }
