--- a/src/app/modules/admin/containers/received-report/received-report.component.html
+++ b/src/app/modules/admin/containers/received-report/received-report.component.html
@@ -1,1 +1,61 @@
-<p>received-report works!</p>
+<div class="container-report">
+    <div class="container-report-received">
+        <section class="container-header-received">
+            <div class="logo-mdp">
+                <img src="/assets/images/logo-MDP.png" alt="logo-MDP" style="width: 113px;
+                height: 49px;">
+            </div>
+            <label class="label-repor-name">Reporte TARTAMUDO </label>
+            <div class="periodo">
+                <p>Periodo</p>
+                <label>{{since}} A {{until}}</label>
+            </div>
+            <div class="close" ><svg width="24px" height="24px" viewBox="0 0 16 16" style="cursor: pointer;" (click)="backToReports()" xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor" class="bi bi-x-square icon">
+                    <path
+                        d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                    <path
+                        d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                </svg></div>
+        </section>
+        <section class="container-centros-received ">
+            <div class="centros-Alcanzados">
+                <p>Reporte recibido de centro:</p>
+                <p class="label-centros" *ngFor="let item of centerSelects">{{item}}</p>
+            </div>
+            <div class="fecha-entrega">
+                <label style="display: flex; margin-top: 4px;">Fecha de recepcion: <span
+                        style="color: #083D5E; margin-left: 5px;"> {{receptionDate}}</span></label>
+            </div>
+        </section>
+        <section class="section-ejes-variables">
+            <div class="container-ejes-variables" *ngFor="let item of axes; let i = index">
+                <label class="ejes-report-received">Eje {{i + 1}}: {{item}}</label>
+                <div class="variables-report-received" >
+                    <!-- <p class="p-variables" *ngFor="let variable of v">{{variable}}</p> -->
+                    <app-variables-show  *ngFor="let v of variables; let j = index" [indexAlphabet]="biAlphabet[j]" [variableValue]="v"></app-variables-show>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-observ">
+                <p class="span-observ" style="font-weight: 600; margin-top: 52px;">Observaciones, comentarios sobre el
+                    reporte recibido C00010</p>
+                <span class="span-text"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error aspernatur unde
+                    voluptate sed, corporis delectus eligendi ipsa in, temporibus sunt porro ratione, molestiae eos
+                    vero? Corrupti neque assumenda nobis asperiores. </span>
+            </div>
+            <div class="container-observ">
+                <p class="span-observ" style="font-weight: 600; margin-top: 52px;">Observaciones, comentarios sobre el
+                    reporte recibido C00010</p>
+                <textarea class="text-observ" placeholder="Ingrese texto" type="text" [(ngModel)]="observ">{{observ}}</textarea>
+            </div>
+        </section>
+        <section>
+            <div class="buttons">
+                <button class="button" mat-button [disabled]="!observ" (click)="storageChange()">Guardar Cambios</button>
+            </div>
+        </section>
+    </div>
+
+</div>
