Style: cambia height

--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -164,7 +164,7 @@
 
                 .variables-preview {
                     width: 782px;
-                    height: 186px;
+                    height: fit-content;
                     padding-left: 29px;
                     padding-top: 14px;
                     font-family: 'Inter';
