Feat: agrega boton de eliminar eje y elimina label variables

--- a/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
+++ b/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
@@ -21,15 +21,15 @@
                 <mat-select placeholder="Selecciona al menos un Centro" checkboxPosition="after"
                     formControlName="centros" panelClass="example-panel-red" multiple="" [(value)]="center"
                     (selectionChange)="catchCenter($event.value)">
-                    <mat-option class="mat-option" [value]="item.id" *ngFor="let item of listCenters">{{item.nombre}}</mat-option>
+                    <mat-option class="mat-option" [value]="item.id" *ngFor="let item of listCenters">{{item.nombre}}
+                    </mat-option>
                 </mat-select>
                 <mat-error *ngIf="formAdd.controls['centros'].invalid && formAdd.controls['centros'].dirty ">
                     <span>Campo requerido</span>
                 </mat-error>
-                <div class="container-button-expand"   >
-                    <a style="cursor: pointer;" class="button-expand" (click)="showModal()"matTooltip="Vizualizar" >
-                        <img style="margin-top: 20px;"
-                                src="../../../../../assets/icons/arrows-angle-expand.svg" />
+                <div class="container-button-expand">
+                    <a style="cursor: pointer;" class="button-expand" (click)="showModal()" matTooltip="Vizualizar">
+                        <img style="margin-top: 20px;" src="../../../../../assets/icons/arrows-angle-expand.svg" />
                     </a>
                 </div>
             </section>
@@ -42,8 +42,8 @@
                 <div class="container-input-date ">
                     <br>
                     <div class="input-wrapper">
-                        <input class="input-fecha " [(ngModel)]="desde" matInput [matDatepicker]="picker" placeholder="Fecha"
-                            formControlName="desde">
+                        <input class="input-fecha " [(ngModel)]="desde" matInput [matDatepicker]="picker"
+                            placeholder="Fecha" formControlName="desde">
                         <mat-datepicker #picker></mat-datepicker>
                         <mat-datepicker-toggle class="input-icon" matSuffix [for]="picker"></mat-datepicker-toggle>
                         <div style="margin-top: 10px;">
@@ -54,8 +54,8 @@
                     </div>
                     <br>
                     <div class="input-wrapper">
-                        <input class="input-fecha " [(ngModel)]="hasta" matInput [matDatepicker]="picker2" placeholder="Fecha"
-                            formControlName="hasta">
+                        <input class="input-fecha " [(ngModel)]="hasta" matInput [matDatepicker]="picker2"
+                            placeholder="Fecha" formControlName="hasta">
                         <mat-datepicker #picker2></mat-datepicker>
                         <mat-datepicker-toggle class="input-icon" matSuffix [for]="picker2"></mat-datepicker-toggle>
                         <div style="margin-top: 10px;">
@@ -65,40 +65,43 @@
                             <mat-error *ngIf="validatorDate()">Fecha introducida incorrecta</mat-error>
                         </div>
                     </div>
-                    
+
                 </div>
             </section>
             <section style="margin-top:49px;" id="select">
-                <label style="margin-right: 420px;">Eje</label>
-                <label>Variable</label>
                 <div *ngFor="let item of arrayc">
-                    <app-selecs-axes-variables [arrayAxes] ="axreturn(item)"  [arrayVariables] ="variableReturn(item)" 
-                    (axes)="storageAxes($event,arrayc.indexOf(item))"(variablesArray)="storageVariables($event,arrayc.indexOf(item))" 
-                    
-                    >{{item}}</app-selecs-axes-variables>
+                    <label style="margin-right: 420px;">Eje <mat-icon (click)="deleteAxe(arrayc.indexOf(item))"
+                            class="iconCancel" matTooltip="Eliminar Eje">cancel</mat-icon></label>
+                    <app-selecs-axes-variables [arrayAxes]="axreturn(item)" [arrayVariables]="variableReturn(item)"
+                        (axes)="storageAxes($event,arrayc.indexOf(item))"
+                        (variablesArray)="storageVariables($event,arrayc.indexOf(item))">{{item}}
+                    </app-selecs-axes-variables>
                 </div>
             </section>
             <button mat-button class="button-ejes" (click)="createEje()">+ Eje</button>
             <div class="container-alert">
                 <Label>Fecha de Entrega(Alerta)</Label>
                 <div class="input-wrapper">
-                    <input class="input-fecha-alerta" [(ngModel)]="deliverdate" type="" formControlName="deliverdate" autocomplete="off" matInput [matDatepicker]="picker3"
-                        placeholder="Dia, Mes, Año">
+                    <input class="input-fecha-alerta" [(ngModel)]="deliverdate" type="" formControlName="deliverdate"
+                        autocomplete="off" matInput [matDatepicker]="picker3" placeholder="Dia, Mes, Año">
                     <mat-datepicker #picker3></mat-datepicker>
                     <mat-datepicker-toggle class="input-icon" matSuffix [for]="picker3"></mat-datepicker-toggle>
                 </div>
                 <div>
-                    <mat-error *ngIf="formAdd.controls['deliverdate'].invalid && formAdd.controls['deliverdate'].dirty ">
+                    <mat-error
+                        *ngIf="formAdd.controls['deliverdate'].invalid && formAdd.controls['deliverdate'].dirty ">
                         <span>Campo Requerido</span>
                     </mat-error>
                     <mat-error *ngIf="validateDateDelivery()">Fecha de entrega incorrecta</mat-error>
                 </div>
             </div>
             <div class="div-button ">
-                <button mat-stroked-button class="button-create" [disabled]="formAdd.invalid || flagAxeVariable" (click)="confirm(formAdd.value)">Crear Reporte</button>
+                <button mat-stroked-button class="button-create" [disabled]="formAdd.invalid || flagAxeVariable"
+                    (click)="confirm(formAdd.value)">Crear Reporte</button>
             </div>
         </form>
     </div>
     <app-confirm-out-modal [show]="showDialog" (selection)="onSelection($event)"></app-confirm-out-modal>
-    <app-preview-report *ngIf="showIt" [oldname]="name" [report] ="formAdd.value" (close)="closeModal($event)"></app-preview-report>
+    <app-preview-report *ngIf="showIt" [oldname]="name" [report]="formAdd.value" (close)="closeModal($event)">
+    </app-preview-report>
 </div>
