--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -1,318 +1,290 @@
 @import "../../../../../styles/variables.scss";
 
 .container-preview {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-left: 123px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-left: 123px;
 
-    h1 {
-        font-family: 'Futura Bk BT';
+  h1 {
+    font-family: "Futura Bk BT";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    margin-top: 10px;
+    text-align: center;
+    color: #000000;
+  }
+
+  .container-preview-reporte {
+    font-size: 16px;
+    width: 842px;
+    max-width: 71.0625em;
+    font-family: "Futura Bk BT";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    border: 1px solid #a3a3a3;
+
+    .container-header-preview {
+      display: flex;
+      flex-direction: row;
+      border-bottom: 5px solid #1967d2;
+      width: 842px;
+      height: 108px;
+      align-items: center;
+      justify-content: center;
+      gap: 166px;
+
+      .logo-mdp {
+        margin-left: 22px;
+      }
+
+      .label-repor-name {
         font-style: normal;
         font-weight: 400;
-        font-size: 30px;
-        line-height: 36px;
-        margin-top: 10px;
+        font-size: 20px;
+        line-height: 24px;
         text-align: center;
         color: #000000;
-    }
+      }
 
-    .container-preview-reporte {
-        font-size: 16px;
-        width: 842px;
-        max-width: 71.0625em;
-        font-family: 'Futura Bk BT';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
-        border: 1px solid #A3A3A3;
-
-        .container-header-preview {
-            display: flex;
-            flex-direction: row;
-            border-bottom: 5px solid #1967D2;
-            width: 842px;
-            height: 108px;
-            align-items: center;
-            justify-content: center;
-            gap: 166px;
-
-            .logo-mdp {
-                margin-left: 22px;
-            }
-
-            .label-repor-name {
-                font-style: normal;
-                font-weight: 400;
-                font-size: 20px;
-                line-height: 24px;
-                text-align: center;
-                color: #000000;
-
-            }
-
-            .periodo {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding: 0px;
-                width: 201px;
-                height: 38px;
-
-                label {
-                    font-family: 'Futura Bk BT';
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 17px;
-                    text-align: center;
-
-                    color: #083D5E;
-                }
-
-                p {
-                    margin: 0px;
-                }
-            }
-        }
-
-        .container-centros-preview {
-            margin-top: 12px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            border-bottom: 2px solid #D9D9D9;
-
-            .centros-Alcanzados {
-                width: 819px;
-                height: 36px;
-                margin-left: 11.5px;
-                top: 0px;
-                border: 1px solid #979797;
-                border-radius: 20px;
-                display: flex;
-            }
-
-            .fecha-entrega {
-                margin-top: 22px;
-                width: 216px;
-                height: 51px;
-                margin-left: 11.5px;
-                top: 0px;
-                border: 1px solid #979797;
-                border-radius: 20px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                margin-bottom: 22px;
-
-                p {
-                    font-family: 'Futura Bk BT';
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 17px;
-                    text-align: center;
-                    color: #083D5E;
-                }
-            }
-
-            p {
-                margin-top: 5px;
-                margin-left: 10px;
-            }
-
-            .label-centros {
-                width: 15%;
-                height: 20.18px;
-                border: 1px solid #1967D2;
-                border-radius: 30px;
-                // text-align: center;
-                justify-content: center;
-                display: flex;
-            }
-        }
-
-        .section-ejes-variables {
-            height: 500px;
-            overflow-y: scroll;
-            margin-top: 22px;
-
-            .container-ejes-variables {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: flex-start;
-                padding: 0px 12px;
-                width: 794px;
-                height: 222px;
-                margin-top: 12px;
-
-                .ejes-preview {
-                    width: 434px;
-                    height: 36px;
-                    left: 12px;
-                    top: 0px;
-                    color: white;
-                    background: #083D5E;
-                    border-radius: 30px 30px 0px 0px;
-                    // text-align: center;
-                    padding: 8px 0px 0px 35px;
-                }
-
-                .variables-preview {
-                    width: 782px;
-                    height: fit-content;
-                    padding-left: 29px;
-                    padding-top: 14px;
-                    font-family: 'Inter';
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 19px;
-                    line-height: 17px;
-                    background: #FFFFFF;
-                    border: 1px solid #79747E;
-                    border-radius: 0px 30px 30px 30px;
-
-                    .p-variables {
-                        padding: 7px 12px;
-                        width: 399px;
-                        height: 31px;
-                    }
-                }
-            }
-        }
-
-        .buttons {
-            display: flex;
-            flex-direction: row;
-            justify-content: end;
-            align-items: flex-end;
-            padding: 10px;
-            gap: 10px;
-
-            .button {
-                width: 108px;
-                height: 59px;
-                background: #92CDEF;
-                border-radius: 35px;
-                margin-top: 23.5px;
-                font-weight: 600;
-            }
-        }
-
-    }
-
-    .modal-2 {
-        box-sizing: border-box;
-        font-family: 'Futura Bk BT';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 40px;
-        text-align: center;
-        letter-spacing: 0.25px;
-        color: #000000;
+      .periodo {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 24px 21px;
-        gap: 24px;
-        z-index: 1001;
-        position: absolute;
-        width: 406px;
-        height: auto;
-        top: 20%;
-        background: #FFFFFF;
-        border: 1px solid #79747E;
+        padding: 0px;
+        width: 201px;
+        height: 38px;
 
-        .close {
-            height: 22px;
-            width: 26px;
-            left: 326px;
-            top: 13px;
-            border-radius: 10px;
-            border: 1.5px solid black;
-            background: #d9d9d9;
-            text-align: center;
-            align-items: center;
-            display: flex;
-            justify-content: center;
-            margin-left: 356px;
-            color: rgba(8, 61, 94, 1);
-            font-family: Futura Bk BT;
-            font-size: 24px;
-            font-weight: 600;
-            line-height: 40px;
-            letter-spacing: 0.25px;
-            text-align: center;
-            cursor: pointer;
-        }
-        .close:hover{
-            color:  rgb(20, 97, 145);
-            border: 1.5px solid  rgb(20, 97, 145);
+        label {
+          font-family: "Futura Bk BT";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 17px;
+          text-align: center;
+
+          color: #083d5e;
         }
 
-        .label {
-            display: flex;
-            flex-direction: row;
-            align-items: flex-start;
-            padding: 9px 39px;
-            gap: 10px;
-            width: 318px;
-            height: 40px;
-            box-shadow: 0px 4px 4px 0px #00000040;
-            font-family: 'Inter';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 22px;
-            color: #979797;
-            background: rgba(217, 217, 217, 0.61);
-            border-radius: 10px;
+        p {
+          margin: 0px;
         }
-
-        button {
-            gap: 10px;
-            width: 143px;
-            height: 61px;
-            font-size: 20px;
-            background: #92CDEF;
-            border-radius: 35px;
-            border: none;
-        }
+      }
     }
 
-    .overlay2 {
-        position: fixed;
-        z-index: 1000;
-        top: 0;
-        left: 0;
-        width: 9999px;
-        height: 9999px;
-        opacity: 0.2;
-        background-color: black;
+    .container-centros-preview {
+      margin-top: 12px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      border-bottom: 2px solid #d9d9d9;
+
+      .centros-Alcanzados {
+        width: 819px;
+        height: 36px;
+        margin-left: 11.5px;
+        top: 0px;
+        border: 1px solid #979797;
+        border-radius: 20px;
+        display: flex;
+      }
+
+      .fecha-entrega {
+        margin-top: 22px;
+        width: 216px;
+        height: 51px;
+        margin-left: 11.5px;
+        top: 0px;
+        border: 1px solid #979797;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 22px;
+
+        p {
+          font-family: "Futura Bk BT";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 17px;
+          text-align: center;
+          color: #083d5e;
+        }
+      }
+
+      p {
+        margin-top: 5px;
+        margin-left: 10px;
+      }
+
+      .label-centros {
+        padding: 0 8px;
+        margin-bottom: 5px;
+        border: 1px solid #1967d2;
+        border-radius: 30px;
+        // text-align: center;
+        justify-content: center;
+        display: flex;
+      }
     }
 
+    .section-ejes-variables {
+      height: 500px;
+      overflow-y: scroll;
+      margin-top: 22px;
 
-}
+      .container-ejes-variables {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding: 0px 12px;
+        width: 794px;
+        height: 222px;
+        margin-top: 12px;
 
-.modal {
-    position: absolute;
-    left: 50%;
-    // top: 50%;
-    transform: translate(-50%, 4%);
+        .ejes-preview {
+          width: 434px;
+          height: 36px;
+          left: 12px;
+          top: 0px;
+          color: white;
+          background: #083d5e;
+          border-radius: 30px 30px 0px 0px;
+          // text-align: center;
+          padding: 8px 0px 0px 35px;
+        }
+
+        .variables-preview {
+          width: 782px;
+          height: fit-content;
+          padding-left: 29px;
+          padding-top: 14px;
+          font-family: "Inter";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 19px;
+          line-height: 17px;
+          background: #ffffff;
+          border: 1px solid #79747e;
+          border-radius: 0px 30px 30px 30px;
+          overflow-x: hidden;
+          .p-variables {
+            padding: 7px 12px;
+            // width: 399px;
+            height: 31px;
+            text-overflow: ellipsis;
+          }
+        }
+      }
+    }
+
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+      align-items: flex-end;
+      padding: 10px;
+      gap: 10px;
+
+      .button {
+        width: 108px;
+        height: 59px;
+        background: #92cdef;
+        border-radius: 35px;
+        margin-top: 23.5px;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .modal-2 {
+    box-sizing: border-box;
+    font-family: "Futura Bk BT";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: 0.25px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 24px 21px;
+    gap: 24px;
     z-index: 1001;
-    box-shadow: rgba(0, 0, 0, 0.4) 10px 10px 4px;
-    background: white;
-    width: 842px;
-    // height: 96%;
-    padding: inherit;
-}
+    position: absolute;
+    width: 406px;
+    height: auto;
+    top: 20%;
+    background: #ffffff;
+    border: 1px solid #79747e;
 
-.overlay {
+    .close {
+      height: 22px;
+      width: 26px;
+      left: 326px;
+      top: 13px;
+      border-radius: 10px;
+      border: 1.5px solid black;
+      background: #d9d9d9;
+      text-align: center;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      margin-left: 356px;
+      color: rgba(8, 61, 94, 1);
+      font-family: Futura Bk BT;
+      font-size: 24px;
+      font-weight: 600;
+      line-height: 40px;
+      letter-spacing: 0.25px;
+      text-align: center;
+      cursor: pointer;
+    }
+    .close:hover {
+      color: rgb(20, 97, 145);
+      border: 1.5px solid rgb(20, 97, 145);
+    }
+
+    .label {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      padding: 9px 39px;
+      gap: 10px;
+      width: 318px;
+      height: 40px;
+      box-shadow: 0px 4px 4px 0px #00000040;
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      color: #979797;
+      background: rgba(217, 217, 217, 0.61);
+      border-radius: 10px;
+    }
+
+    button {
+      gap: 10px;
+      width: 143px;
+      height: 61px;
+      font-size: 20px;
+      background: #92cdef;
+      border-radius: 35px;
+      border: none;
+    }
+  }
+
+  .overlay2 {
     position: fixed;
     z-index: 1000;
     top: 0;
@@ -321,4 +293,29 @@
     height: 9999px;
     opacity: 0.2;
     background-color: black;
+  }
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  // top: 50%;
+  transform: translate(-50%, 4%);
+  z-index: 1001;
+  box-shadow: rgba(0, 0, 0, 0.4) 10px 10px 4px;
+  background: white;
+  width: 842px;
+  // height: 96%;
+  padding: inherit;
+}
+
+.overlay {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 9999px;
+  height: 9999px;
+  opacity: 0.2;
+  background-color: black;
 }
