Feat: Implementa endpoint de carga de observaCiones

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -60,6 +60,7 @@
       name="comment"
       id="comment"
       placeholder="Ingrese texto"
+      [(ngModel)]="commentToUpload"
     ></textarea>
   </div>
   <app-pop-up-success
