Style: agrega margin left

--- a/src/app/modules/admin/containers/variables-show/variables-show.component.scss
+++ b/src/app/modules/admin/containers/variables-show/variables-show.component.scss
@@ -6,6 +6,8 @@
     line-height: 14px;
     width: 772px;
     height: 92px;
+    margin-left: 54px;
+    
 
     .nameVariable {
         width: 196px;
