--- a/src/app/modules/admin/containers/variables-show/variables-show.component.html
+++ b/src/app/modules/admin/containers/variables-show/variables-show.component.html
@@ -1,11 +1,11 @@
-<div class="container-variablesShow">
-    <div>
+<div style="border-bottom: 1px solid #979797; " >
+    <div class="container-variablesShow">
         <p class="nameVariable">{{indexAlphabet}} {{variableValue.nombre}}</p>
         <p *ngIf="variableValue.tipo === 'Numérico'" class="typeOfResponce">{{variableValue.valor_final}}</p>
-        <div style="margin-left: 5px;" *ngIf="variableValue.tipo === 'Textual' && variableValue.escala_valor">
+        <div style="margin-left: 5px;" *ngIf="variableValue.tipo === 'Textual'">
             <p>{{variableValue.descripcion}}</p>
             <label style="position: absolute;">Escala de valor:</label>
-            <div class="container-escala">
+            <div class="container-escala" *ngIf="variableValue.escala_valor">
                 <label>{{variableValue.etiqueta_inicial}}</label>
                 <mat-radio-group class="value-scale__radio-group">
                     <mat-radio-button [checked]="item == variableValue.valor_final" class="value-scale__radio-btn"
