--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -1,5 +1,3 @@
-// @import 'styles/variables.scss';
-// @import 'styles/variables.scss';
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import "../../../../../styles/variables.scss";
 
@@ -99,9 +97,10 @@
           box-shadow: 0 2px 2px #00000040;
           height: 48px;
           margin-bottom: 8px;
-          padding-left: 1.5em;
-          display: flex;
-          justify-content: space-between;
+          padding: 0 1.5em;
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          justify-items: center;
           align-items: center;
 
           .list-center__header {
@@ -112,19 +111,21 @@
             color: #000000;
 
             &:first-of-type {
-              padding-left: 1.5em;
+              justify-self: flex-start;
             }
           }
 
           .list-center__header--action {
-            width: 153px;
+            width: 205px;
+            justify-self: flex-end;
           }
 
           .list-center__cell--acction {
-            width: 153px;
+            width: 205px;
             height: 50px;
             display: flex;
             align-items: center;
+            justify-self: flex-end;
 
             .list-center__ico-action {
               padding: 0.625em 0.625em 0.625em 0;
@@ -137,20 +138,15 @@
             }
           }
           .list-center__cell--center {
-            min-width: 330px;
+            justify-self: flex-start;
           }
           .list-center__cell--middle {
-            min-width: 280px;
           }
           .list-center__cell {
             font-family: "Inter" !important;
             font-size: 1em;
             line-height: 1.1875em;
             color: #000000;
-
-            &:first-of-type {
-              padding-left: 1.5em;
-            }
           }
         }
       }
@@ -296,12 +292,8 @@
     justify-content: none;
 
     .center {
-      margin-right: 4.375em;
-      margin-left: 7.9375em;
-
       .center__title {
         margin-top: 40px;
-        padding-right: 57px; //centra el titulo alineado con el logo del header
       }
     }
   }
