Feat: Agrega iconos de crear y ver informe comparativo

--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -72,6 +72,20 @@
               matTooltip="Borrar"
               (click)="elim(element)"
             />
+            <img
+              class="list-center__ico-action"
+              src="../../../../../assets/icons/compare-24.png"
+              alt="icono de Comparar"
+              matTooltip="Comparar Reportes"
+              (click)="createCompareReports(2)"
+            />
+            <img
+              class="list-center__ico-action list-center__ico-action--report"
+              src="../../../../../assets/icons/Book.svg"
+              alt="icono de Mostrar informes"
+              matTooltip="Informes Comparativos"
+              (click)="viewComparisonReport(7)"
+            />
           </div>
         </div>
       </div>
