--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -116,23 +116,27 @@
           }
 
           .list-center__header--action {
-            width: 205px;
+            width: 188px;
             justify-self: flex-end;
           }
 
           .list-center__cell--acction {
-            width: 205px;
+            width: 188px;
             height: 50px;
             display: flex;
             align-items: center;
             justify-self: flex-end;
 
             .list-center__ico-action {
+              width: 24px;
+              box-sizing: content-box;
               padding: 0.625em 0.625em 0.625em 0;
               margin-right: 1.0625em;
               cursor: pointer;
             }
-
+            .list-center__ico-action--report {
+              margin-right: 0;
+            }
             .list-center__ico-action--edit {
               margin-top: 4px;
             }
