--- a/src/app/modules/admin/containers/variables-show/variables-show.component.scss
+++ b/src/app/modules/admin/containers/variables-show/variables-show.component.scss
@@ -5,12 +5,14 @@
     font-size: 12px;
     line-height: 14px;
     width: 772px;
-    height: 92px;
+    height: fit-content;
     margin-left: 54px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     
 
     .nameVariable {
-        width: 196px;
+        width: fit-content;
         height: 17px;
         left: 621px;
         top: 513px;
