Style: cambia clase centros alcanzados

--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -83,15 +83,18 @@
       flex-direction: column;
       align-items: flex-start;
       border-bottom: 2px solid #d9d9d9;
+      
 
       .centros-Alcanzados {
         width: 819px;
-        height: 36px;
+        height: fit-content;
         margin-left: 11.5px;
         top: 0px;
         border: 1px solid #979797;
         border-radius: 20px;
         display: flex;
+        text-align: center;
+        align-items: center;
       }
 
       .fecha-entrega {
